# DIAMesh

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
diamesh/: __init__.py  cli.py  diagnose.py  diff.py  loader.py  reducer.py  viewer.py
docs/: USER_GUIDE.docx  USER_GUIDE.md
pyrender/: viewer.py
scripts/: blender_decimate.py  build_user_guide_docx.py  build_user_guide_pdf.py  setup_vendor.py
tests/fixtures/: sphere.fbx
